--- a/UC_12_Sabrina_Relac_1000/App.config
+++ b/UC_12_Sabrina_Relac_1000/App.config
@@ -1,13 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="UC_12_Sabrina_Relac_1000.Properties.Settings.RELACIONAMENTOS_200ConnectionString"
-            connectionString="Data Source=OSA0625259W10-1;Initial Catalog=RELACIONAMENTOS_200;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="UC_12_Sabrina_Relac_1000.Properties.Settings.RELACIONAMENTOS_200ConnectionString" connectionString="Data Source=OSA0625259W10-1;Initial Catalog=RELACIONAMENTOS_200;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
 </configuration>
